Fix heart z-index

--- a/src/assets/styles/cmps/ImageCarousel.scss
+++ b/src/assets/styles/cmps/ImageCarousel.scss
@@ -44,6 +44,7 @@
             top: 5%;
             right: 5%;
             transition: 200ms;
+            z-index: 1;
 
             &:hover {
                 scale: 1.05;
